The UI was tested for overflow issue and the was Email Service tested for teh live server

--- a/src/styles/formFooter.css
+++ b/src/styles/formFooter.css
@@ -53,6 +53,7 @@
 
 .btn{
     background-color: var(--color-red2);
+	border: none;
     color: white;
     width: 20%;
     height: 2vw;
@@ -66,7 +67,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: 1.25vw auto;
-    /* padding-top: 0.75vw; */
+	border: none;
     color: white;
     width: 20%;
     height: 2vw;
